Reduce preliferation of TransactionChainHandler
RestconfStrategy does not need to work on transaction chains -- we are
really dealing with standalone transactions every step of the way. This
ends up simplifying the flow quite a bit.

JIRA: NETCONF-773
Change-Id: I70c49e7c2f9da250c53ebfc32ddb99456f9b2c46
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>